memory-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: memory-demo
spec:
  containers:
    - name: hog
      image: python:3-alpine
      command: ["python", "-c", "a = bytearray(100*1024*1024); import time; time.sleep(3600)"]
      resources:
        requests:
          memory: "20Mi"
        limits:
          memory: "50Mi"
