ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab
spec:
  ingressClassName: nginx
  rules:
    - host: lab.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-k8s-lab
                port:
                  number: 80
